--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -24,92 +24,10 @@
 
     {% block javascripts %}
         {{ encore_entry_script_tags('app') }}
-        
-    <script>
-    $( document ).ready(function() {
-
-    console.log('Bonjour !');
-    
-        $('.video').on('click', function(){
-
-            const YoutubeUrl = 'https://www.youtube.com/watch?v=';
-            const YoutubeRegex = 'watch?v=';
-            const DailymotionUrl = 'https://www.dailymotion.com/video/';
-
-            var videoUrl = $(this).prev().val();
-            var finalYoutube = videoUrl.replace("watch?v=", "embed/");
-            var finalDailymotion = videoUrl.replace("video", "embed/video");
-
-            if (finalYoutube.includes('youtube')) {
-                $('.preview-video') [0].src=finalYoutube;
-            } 
-            else if (finalDailymotion.includes('dailymotion')) {
-                $('.preview-video') [0].src=finalDailymotion;
-            } else {
-                    alert('L\'URL n\'est pas valide. Veuillez insérer une URL Youtube ou Dailymotion');
-            }
-            console.log(finalYoutube); 
-        })
-    });
-
-    //define template
-var template = $('#videos .video:first').clone();
-
-//define counter
-var sectionsCount = 1;
-
-//add new section
-$('body').on('click', '#add', function() {
-
-    //increment
-    sectionsCount++;
-
-    //loop through each input
-    var section = template.clone().find(':input').each(function(){
-
-        //set id to store the updated section number
-        var newId = this.id + sectionsCount;
-
-        //update for label
-        $(this).prev().attr('input-group-text', newId);
-
-        //update id
-        this.id = newId;
-
-    }).end()
-
-    //inject new section
-    .appendTo('#videos');
-    return false;
-});
-
-//remove section
-$('#videos').on('click', '#remove', function() {
-    //fade out section
-    $(this).parent().fadeOut(300, function(){
-        //remove parent element (main section)
-        $(this).parent().empty();
-        return false;
-    });
-    return false;
-});
-
-    </script>
-
-    {# <script>
-    $(document).ready(function(event){
-        $('#add').on('click', function(){
-                $('.input-group').clone().appendTo($('#videos'));
-                $('.preview-video').clone().appendTo($('.preview-list'));
-            event.stopPropagation();
-        })
-    });
-    </script> #}
-
-
     {% endblock %}
 
         <!--Scripts-->
+        <script src="/OCR-P6/public/build/trick-add.js"></script>
         <script src="/OCR-P6/public/quixlab-master/plugins/common/common.min.js"></script>
         <script src="/OCR-P6/public/quixlab-master/js/custom.min.js"></script>
         <script src="/OCR-P6/public/quixlab-master/js/settings.js"></script>
