--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -8,29 +8,31 @@
     <meta name="author" content="Mirko Venturi">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    
     {% block stylesheets %}
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <!--Custom CSS-->
-    {# <link src="../templates/modern-business/css/modern-business.css" rel="stylesheet"> #}
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link src="../quixlab-master/css/style.css" rel="stylesheet">
+    <link href="../public/build/arrow.css" rel="stylesheet">
     {% endblock %} 
     <title>{% block title %} SnowTrick - {% endblock %}</title>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 </head>
 
 
 <body>
-    {% block body %}
-        
-        {% include 'Parts/_header.html.twig' %}
 
+    {% block body %}
+        {% include 'Parts/_header.html.twig' %}
     {% endblock %}
 
     {% block javascripts %} 
     <!-- Bootstrap core JavaScript -->
-    <script src="../templates/modern-business/vendor/jquery/jquery.min.js"></script>
+    <script src="../public/build/jquery-1.7.2.min.js"></script>
+    <script src="{{ asset('build/jquery-1.7.2.min.js') }}"></script>
     <script src="../templates/modern-business/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    {# <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script> #}
+    <script type="text/javascript" src="../assets/js/jquery-1.7.2.min.js"></script>
     {% endblock %}
 
 </body>    
