--- a/templates/Trick/view.html.twig
+++ b/templates/Trick/view.html.twig
@@ -1,26 +1,168 @@
 {# templates/Trick/view.html.twig #}
 
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <title>SnowTrick - Figure {{ id }}</title>
-  <meta charset="UTF-8">
-</head>
-<body>
-  <h1>Figure - {{ id }}</h1>
-  <h2>Bienvenue sur la page du Trick {{ id }} !</h2>
-  <p>
-    {{ 'Mirko' }} - Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br/>
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br/>
-    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br/>
-    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br/>
-  </p>
-  <div>
-    {# On affiche tous les messages flash nommés "info" #}
-    {% for message in app.flashes('info') %}
-      <p>Message flash : {{ message }}</p>
-    {% endfor %}
-  </div>
-</body>
-</html>
+{% extends "dashboard.html.twig" %}
+
+{% block stylesheets %}
+  {{ parent() }}
+  <link src="../public/build/app.css" rel="stylesheet">
+
+{% endblock %}
+
+{% block title %}{{ parent() }} Liste des figures {% endblock %}
+
+{% block body %}
+
+{{ include("Parts/_header.html.twig") }}
+
+<!-- Page Content -->
+<div class="container-fluid" id="trick-container">
+  {{ parent() }}
+
+  <!-- Start Trick -->
+    <div class="container mt-5">
+        <div class="row justify-content-center mt-5">
+            <div class="col-md-10 col-md-offset-1 mt-5 mb-4">
+                <div class="card mt-5">
+                    {# <img class="card-img-top" src="/images/{{ trick.image }}" alt="{{ trick.title }}-main"> #}
+                    <div class="card-body">
+                        <ul class="list-inline trick-data">
+                            <li class="list-inline-item">
+                                {# Par : <a target="_blank" href="{{ path('user_profile', { 'id' : trick.user.id }) }}">{{ trick.user.username }}</a> #}
+                            </li> |
+                            <li class="list-inline-item">
+                                Ajouté le {{ trick.dateAdd | date('d/m/Y') }} (<small>Mise à jour le : {% if trick.dateUpdate is defined %}{{ trick.dateUpdate | date('d/m/Y') }}{% endif %}</small>)
+                            </li> |
+                            <li class="list-inline-item">
+                                Catégorie : {{ trick.category.name }}
+                            </li> |
+                            <li class="list-inline-item">
+                                <a href="#comments-block">{{ trick.comments | length }} commentaires</a>
+                            </li>
+                        </ul>
+                        <hr>
+                        <h4 class="card-title"><strong>{{ trick.name }}</strong></h4>
+                        <hr>
+                        <!-- Start Carousel -->
+                        {% if (medias) or (videos) %}
+                            <div class="row d-none d-lg-flex load-media">
+                                <div class="col-lg-6 col-md-12">
+                                    <div id="carousel" class="carousel slide mt-3 mb-2" data-ride="carousel">
+                                        <ol class="carousel-indicators">
+                                            {% for media in medias %}
+                                                <li data-target=".carousel" data-slide-to="{{ loop.index0 }}" {% if loop.index0 == 0 %} class="active" {% endif %}></li>
+                                            {% endfor %}
+                                        </ol>
+                                        <div class="carousel-inner enlarge">
+                                            {% for media in medias %}
+                                                <div class="carousel-item {% if loop.index0 == 0 %} active {% endif %}">
+                                                    {# <img class="d-block" src="/images/{{ media.name }}" alt="{{ trick.title }}-image-{{ media.id }}"> #}
+                                                </div>
+                                            {% endfor %}
+                                        </div>
+                                        <a class="carousel-control-prev" href="#carousel" data-slide="prev">
+                                            <span class="carousel-control-prev-icon"></span>
+                                        </a>
+                                        <a class="carousel-control-next" href="#carousel" data-slide="next">
+                                            <span class="carousel-control-next-icon"></span>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6 col-md-12">
+                                    <div id="carousel-v" class="carousel slide mt-3 mb-2" data-ride="carousel">
+                                        <ol class="carousel-indicators">
+                                            {% for video in videos %}
+                                                <li data-target="#carousel-v" data-slide-to="{{ loop.index0 }}" {% if loop.index0 == 0 %} class="active" {% endif %}></li>
+                                            {% endfor %}
+                                        </ol>
+                                        <div class="carousel-inner">
+                                            {% for video in videos %}
+                                                <div class="carousel-item {% if loop.index0 == 0 %} active {% endif %}">
+                                                    <iframe class="preview-video" name="add_trick[videos][0]" frameborder='0' allowfullscreen="1" src="{{ video.url }}" value=""></iframe>
+                                                </div>
+                                            {% endfor %}
+                                        </div>
+                                        <a class="carousel-control-prev" href="#carousel-v" data-slide="prev">
+                                            <span class="carousel-control-prev-icon"></span>
+                                        </a>
+                                        <a class="carousel-control-next" href="#carousel-v" data-slide="next">
+                                            <span class="carousel-control-next-icon"></span>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="text-center">
+                                <a href="#" id="loadMedia" class="d-md-block d-lg-none">
+                                    <button class="btn btn-outline-secondary">Afficher les médias</button>
+                                </a>
+                                <a href="#" id="hideMedia" class="d-none d-md-none d-lg-none">
+                                    <button class="btn btn-outline-secondary mt-3">Masquer les médias</button>
+                                </a>
+                            </div>
+                        {% else %}
+                            <div class="row justify-content-center">
+                                <div class="d-inline-block text-center no-medias">
+                                    <p class="mt-3 ml-3 mr-3">Pas de médias pour ce trick</p>
+                                </div>
+                            </div>
+                        {% endif %}
+                        <!-- End Carousel -->
+                        <hr>
+                        <h5 class="card-title">Description</h5>
+                        <p class="card-text text-justify">{{ trick.description }}</p>
+                    </div>
+                </div>
+                <!--  End Trick -->
+
+                <!-- Start Comment Add Form -->
+                {# {% if app.user %} #}
+                      <div class="col-lg-12 px-0 mb-30">
+                        <div class="cmt padDiv">
+                        {# <h6 class="mb-30">Bonjour {{ app.user.username }} !</h6> #}
+                            {{ form_start(form) }}
+                            <div class="form-group">
+                                {{ form_row(form.content) }}
+                            </div>
+                            <div class="form-group text-center">
+                                <button type="submit" class="btn btn-success mt-3">Commenter</button>
+                            </div>
+                            {{ form_end(form) }}
+                        </div>
+                    </div>
+                    {# {% else %} #}
+                    <div class="col-md-12 px-0 mb-30">
+                        <div class="comments text-center p-3">
+                            <p><a href="{{ path('app_user_register') }}">Inscrivez-vous</a> ou <a href="{{ path('app_user_login') }}">connectez vous</a> pour commenter cet article</p>
+                        </div>
+                    </div>
+                    {# {% endif %} #}
+                <!-- Start Comment Add Form -->
+
+                <!-- Start Comments -->
+                <span class="comments-anchor" id="comments-block"></span>
+                <div class="col-md-12 pl-0 pr-0">
+                    <div class="comments text-left padDiv mb-30">
+                        <div class="entry-comments">
+                        <h6 class="mb-30">{{ trick.comments | length }} commentaires</h6>
+                            <ul class="entry-comments-list list-unstyled">
+                                {% for comment in comments %}
+                                <span class="comment-anchor" id="{{ comment.id }}"></span>
+                                <li>
+                                <div class="entry-comments-item">
+                                    {# <img src="/images/{{ comment.user.avatar }}" class="entry-comments-avatar" alt="{{ comment.user.username }}"> #}
+                                        <div class="entry-comments-body">
+                                            {# <span class="entry-comments-author"><a href="{{ path('user_profile', { 'id' : comment.user.id }) }}" target="_blank">{{ comment.user.username }}</a></span> #}
+                                            <span class="comment-date">le {{ comment.dateAdd | date('d/m/Y') }} à {{ comment.dateAdd | date('H:i') }}</span>
+                                            <p class="comment-content text-justify">{{ comment.content }}</p>
+                                        </div>
+                                    </div>
+                                </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- End Comments -->
+            </div>
+        </div>
+    </div>
+{% endblock %}
