--- a/templates/User/login.html.twig
+++ b/templates/User/login.html.twig
@@ -2,20 +2,50 @@
 
 {% extends "layout.html.twig" %}
 
-{% block stylesheets %}{{ parent() }}{% endblock %}
+{% block stylesheets %}
 
-{% block title %}{{ parent() }} Liste des figures {% endblock %}
+  {{ parent() }}
+  <link src="../public/build/app.css" rel="stylesheet">
+
+{% endblock %}
+
+{% block title %}SnowTricks - Connexion{% endblock %}
 
 {% block body %}
 
 <!-- Page Content -->
 <div class="container-fluid">
   {{ parent() }}
+  <div class="row justify-content-center" style="margin-top: 10%;">
+    <div class="col-xs-12 col-sm-8 col-md-6 col-lg-5 bg-light card mt-7 p-5">
+      <h1 class="text-center text-md text-uppercase mb-4">Connexion</h1>
+        <div class="card-body">
 
-    <div class="row">
-        <img src="../img/snowtrick-login.jpg" class="img-fluid my-5" alt="snowtrick">
+        {# {% if error %}
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %} #}
+
+        {# <form action="{{ path ('account_login') }}" method="post"> #}
+        <form action="" method="post">
+            <div class="form-group">
+                <label for="username">Nom d'utilisateur</label>
+                {# <input type="text" name="_username" id="username" class="form-control" placeholder="Nom d'utilisateur" required value="{{ username }}"> #}
+              <input type="text" name="_username" id="username" class="form-control" placeholder="Nom d'utilisateur" required value="">
+            </div>
+            <div class="form-group">
+                <label for="password">Mot de passe</label>
+                <input type="password" name="_password" id="password" class="form-control" placeholder="Mot de passe" required>
+            </div>
+            <div class="form-group text-center">
+                <button type="submit" class="btn btn-primary">Connexion</button>
+            </div>
+        </form>
+        <p class="text-center">
+            {# <a href="{{ path('account_password_forgot') }}">Mot de passe oublié ?</a><br>
+            <a href="{{ path('account_registration') }}">Inscription</a> #}
+        </p>
+      </div>
     </div>
-
+  </div>
 </div>
-
 {% endblock %}
